<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.origamilabs.library.views.ScaleImageView
            android:id="@+id/scaleImageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/home88" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:background="#202020"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_want_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="0.3"
                android:background="@drawable/custom_btn_want_go"
                android:drawableBottom="@drawable/btn_want_go"
                android:text="@string/title_activity_want_togo"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_friend_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="0.4"
                android:background="@drawable/custom_btn_friends"
                android:drawableTop="@drawable/btn_friends"
                android:text="@string/title_activity_friends_go"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_professional_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="0.3"
                android:background="@drawable/custom_btn_professional"
                android:drawableLeft="@drawable/btn_professional_go"
                android:text="@string/title_activity_professional_go"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_popularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="0.6"
                android:background="@drawable/custom_btn_popularity"
                android:drawableBottom="@drawable/btn_popularity"
                android:text="@string/title_activity_popularity"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_fans_camp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1sp"
                android:layout_weight="0.4"
                android:background="@drawable/custom_btn_fans"
                android:drawableLeft="@drawable/btn_fans_camp"
                android:text="@string/title_activity_fans_camp"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>